# game.libretro.mame2003-plus

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/mame2003-plus/: CMakeLists.txt  mame2003-plus.txt
game.libretro.mame2003-plus/: addon.xml.in
game.libretro.mame2003-plus/resources/language/English/: strings.po
resources/: settings.xml
